modify some BCs

--- a/Ch09-Normal-Modes-and-Waves/9.7-Wave-Motion.ipynb
+++ b/Ch09-Normal-Modes-and-Waves/9.7-Wave-Motion.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,13 +151,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7e786517f88d4c46ba5dbf081a39a28a",
+       "model_id": "88e1214f4ece43dda277479dad5c7c63",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,13 +192,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1619eccdab74488da36c2a2c4f8e5c01",
+       "model_id": "7a1616e6ec7c423d9d222d67f4308d5d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,25 +284,25 @@
     "    dudt[0] = dudt[N]\n",
     "    dvdt[0] = dvdt[N]\n",
     "    dudt[N+1] = dudt[1]\n",
-    "    dvdt[N+1] = dvdt[1]\n",
+    "    dvdt[N+1] = dvdt[1] \n",
     "    \n",
     "    return np.hstack([dudt, dvdt])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "dfc600f027114548a7c34c7158c57ab7",
+       "model_id": "29646391a5964880a10ad59efa8cb3cb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='t', max=200), IntSlider(value=2, description='n', max=20…"
+       "interactive(children=(IntSlider(value=0, description='t'), IntSlider(value=2, description='n', max=20, min=1),…"
       ]
      },
      "metadata": {},
@@ -310,6 +310,8 @@
     }
    ],
    "source": [
+    "tmax = 100\n",
+    "\n",
     "@interact(t=(0, tmax, 1), n=(1, 20), N=(1, 50))\n",
     "def simulate(t=0, n=2, N=10):\n",
     "    \n",
@@ -317,7 +319,6 @@
     "    a = L/(N)       # distance between particles\n",
     "    k = 1           # spring constant\n",
     "    m = 1           # particle mass\n",
-    "    tmax = 100\n",
     "    \n",
     "    J = np.arange(N+2)\n",
     "    x = a*J\n",
@@ -352,8 +353,18 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$$\\begin{align}\n",
+    "u_0 &= u_1 \\\\\n",
+    "u_{N+1} &= u_{N}\n",
+    "\\end{align}$$"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,8 +380,8 @@
     "    \n",
     "    for j in range(1, N+1):\n",
     "        dudt[j] = v[j]\n",
-    "        dvdt[j] = -k/m * (2*u[j] - u[j-1] - u[j+1])\n",
-    "        \n",
+    "        dvdt[j] = -k/m * (2*u[j] - u[j-1] - u[j+1]) \n",
+    "\n",
     "    dudt[0] = dudt[1]\n",
     "    dvdt[0] = dvdt[1]\n",
     "    dudt[N+1] = dudt[N]\n",
@@ -381,18 +392,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a186106ae3c94249baebd1321f19f98a",
+       "model_id": "2bddd381f35048ac84e642a4895aaa80",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='t', max=200), IntSlider(value=2, description='n', max=20…"
+       "interactive(children=(IntSlider(value=0, description='t'), IntSlider(value=2, description='n', max=20, min=1),…"
       ]
      },
      "metadata": {},
@@ -443,6 +454,7 @@
     "    v = y[N+2:]\n",
     "\n",
     "    plt.plot(x, u, 'o-')\n",
+    "    plt.plot(x, u0, 'o-')\n",
     "    plt.xlabel('x')\n",
     "    \n",
     "    plt.ylim(-1, 1)"
@@ -452,12 +464,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Forced boundary condition"
+    "## Forced boundary condition\n",
+    "\n",
+    "$$ u(0, t) = A \\sin (\\omega t)$$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 250,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,22 +488,24 @@
     "    for j in range(1, N+1):\n",
     "        dudt[j] = v[j]\n",
     "        dvdt[j] = -k/m * (2*u[j] - u[j-1] - u[j+1])\n",
-    "        \n",
+    "    \n",
+    "    #u[0] = A*np.sin(ω*t)\n",
     "    dudt[0] = ω*A*np.cos(ω*t)\n",
-    "    dvdt[0] = -ω**2*A*np.sin(ω*t)\n",
+    "    dvdt[0] = -ω**2*A*np.cos(ω*t)\n",
+    "    \n",
     "    \n",
     "    return np.hstack([dudt, dvdt])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": 98,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "76f7e88cd732487584fa362a10f7debf",
+       "model_id": "95ccee7f3c844ad5b11058a16a1336fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -507,9 +523,9 @@
     "@interact(t=(0, tmax, 1), ω=(0, 3, 0.05))\n",
     "def simulate(t=0, ω=1.0):\n",
     "    \n",
-    "    N = 500\n",
+    "    N = 100\n",
     "    A = 1\n",
-    "    L = 0.2           # distance between end points\n",
+    "    L = 1           # distance between end points\n",
     "    a = L/(N+1)       # distance between particles\n",
     "    k = 1         # spring constant\n",
     "    m = 1           # particle mass\n",
@@ -535,7 +551,8 @@
     "    plt.plot(x, u, '-')\n",
     "    plt.xlabel('x')\n",
     "    \n",
-    "    plt.ylim(-1, 1)"
+    "    plt.ylim(-1, 1)\n",
+    "    plt.xlim(0,L)"
    ]
   },
   {
