--- a/Ch10-Electrodynamics/10.1-Static-Charges.ipynb
+++ b/Ch10-Electrodynamics/10.1-Static-Charges.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,33 +41,38 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 23,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "%matplotlib widget\n",
-    "\n",
-    "from matplotlib.backend_bases import MouseButton"
+    "## 10.2 Electric Fields"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "meshgrids and pcolormesh"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# see https://github.com/matplotlib/jupyter-matplotlib for install instructions\n",
+    "%matplotlib widget"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 294,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-74-37e5b6d61c77>:4: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
-      "  fig, ax = plt.subplots()\n"
-     ]
-    },
-    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a3d913c28d154c8cbf7e4e12172b8386",
+       "model_id": "f463918ec17646e1846940ab169c81b2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -77,30 +82,177 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-294-c6bbb0ee4744>:29: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Ex += q / dr**3 * dr_x\n",
+      "<ipython-input-294-c6bbb0ee4744>:29: RuntimeWarning: invalid value encountered in multiply\n",
+      "  Ex += q / dr**3 * dr_x\n",
+      "<ipython-input-294-c6bbb0ee4744>:30: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Ey += q / dr**3 * dr_y\n",
+      "<ipython-input-294-c6bbb0ee4744>:30: RuntimeWarning: invalid value encountered in multiply\n",
+      "  Ey += q / dr**3 * dr_y\n"
+     ]
     }
    ],
    "source": [
-    "xs = np.array([2,8,])\n",
-    "ys = np.array([3,8])\n",
+    "plt.close()  # if we don't close first, we will keep on creating new figures\n",
+    "\n",
+    "fig = plt.figure()\n",
+    "\n",
+    "dx = dy = 1.0\n",
+    "xmax = ymax = 10+dx\n",
+    "xmin = ymin = -10\n",
+    "Y, X = np.mgrid[xmin:xmax:dx, ymin:ymax:dy]\n",
+    "Yedges, Xedges = np.mgrid[xmin-dx/2:xmax+dx/2:dx, ymin-dy/2:ymax+dy/2:dy]\n",
+    "\n",
+    "charges = [ {'q': 1, 'x': 5, 'y': 3},\n",
+    "            {'q': -1, 'x': -5, 'y': -5},\n",
+    "            {'q': 1, 'x': 0, 'y': 3},\n",
+    "          ]\n",
+    "\n",
+    "Ex = np.zeros_like(X)\n",
+    "Ey = np.zeros_like(X)\n",
+    "\n",
+    "for charge in charges:\n",
+    "    x = charge['x']\n",
+    "    y = charge['y']\n",
+    "    q = charge['q']\n",
+    "    \n",
+    "    dr_x = X - x\n",
+    "    dr_y = Y - y\n",
+    "\n",
+    "    dr = np.sqrt(dr_x**2 + dr_y**2)\n",
+    "\n",
+    "    Ex += q / dr**3 * dr_x\n",
+    "    Ey += q / dr**3 * dr_y\n",
+    "    \n",
+    "    plt.plot(x, y, 'ro')\n",
+    "\n",
+    "E = np.sqrt(Ex**2 + Ey**2)\n",
+    "\n",
+    "plt.pcolormesh(Xedges, Yedges, E)\n",
+    "#plt.contourf(X, Y, E, [0.1 , 0.2,0.3, 1, 2, 3])\n",
+    "#plt.plot(X, Y, 'k.')\n",
+    "#plt.quiver(X, Y, (Ex/E), (Ey/E))\n",
+    "plt.colorbar()\n",
+    "\n",
+    "plt.streamplot(X, Y, Ex, Ey, density=0.7)\n",
+    "\n",
+    "plt.xlim(xmin, xmax)\n",
+    "plt.ylim(ymin, ymax)\n",
+    "\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'q': 1, 'x': 5, 'y': 3},\n",
+       " {'q': -1, 'x': -5, 'y': -5},\n",
+       " {'q': 1, 'x': 0, 'y': 3},\n",
+       " {'q': 1, 'x': 2, 'y': 3}]"
+      ]
+     },
+     "execution_count": 165,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "charges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 163,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 164,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "add_charge(1, 2, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 293,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Canvas(toolbar=Toolbar(toolitems=[('Home', 'Reset original view', 'home', 'home'), ('Back', 'Back to previous …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-293-2d18f33c5bda>:58: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Ex += q / dr**3 * dr_x\n",
+      "<ipython-input-293-2d18f33c5bda>:58: RuntimeWarning: invalid value encountered in multiply\n",
+      "  Ex += q / dr**3 * dr_x\n",
+      "<ipython-input-293-2d18f33c5bda>:59: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "  Ey += q / dr**3 * dr_y\n",
+      "<ipython-input-293-2d18f33c5bda>:59: RuntimeWarning: invalid value encountered in multiply\n",
+      "  Ey += q / dr**3 * dr_y\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "from matplotlib.backend_bases import MouseButton\n",
+    "\n",
+    "plt.close()  # if we don't close first, we will keep on creating new figures\n",
     "\n",
     "fig, ax = plt.subplots()\n",
-    "line, = ax.plot(xs, ys, 'ko', markersize=10,)\n",
     "\n",
-    "X, Y = np.mgrid[0:10, 0:10]\n",
+    "dx = dy = 0.1\n",
+    "xmax = ymax = 10+dx\n",
+    "xmin = ymin = -10\n",
+    "Y, X = np.mgrid[xmin:xmax:dx, ymin:ymax:dy]\n",
+    "Yedges, Xedges = np.mgrid[xmin-dx/2:xmax+dx/2:dx, ymin-dy/2:ymax+dy/2:dy]\n",
     "\n",
-    "# loop over charges\n",
+    "charges = [ ]\n",
     "\n",
-    "dx = X - xs[0]\n",
-    "dy = Y - ys[0]\n",
-    "Ex = np.sqrt(dx**2 + dy**2)**3*dx\n",
-    "Ey = np.sqrt(dx**2 + dy**2)**3*dy\n",
-    "E = np.sqrt(Ex**2 + Ey**2)\n",
-    "plt.pcolor(X, Y, E)\n",
+    "def add_charge(q, x, y):\n",
+    "    charge = {'q': q, 'x': x, 'y': y}\n",
+    "    charges.append(charge)\n",
+    "    \n",
+    "add_charge(1, 5, 3)\n",
+    "add_charge(-1, -5, -5)\n",
+    "add_charge(1, 0, 3)\n",
     "\n",
     "def get_ind(e):\n",
     "    epsilon = 0.1\n",
-    "    if len(xs) == 0:\n",
+    "    if len(charges) == 0:\n",
     "        return None\n",
+    "    \n",
+    "    xs = [charge['x'] for charge in charges]\n",
+    "    ys = [charge['y'] for charge in charges]\n",
     "    \n",
     "    d = np.hypot(np.asarray(xs) - e.xdata,\n",
     "                np.asarray(ys) - e.ydata,\n",
@@ -112,97 +264,124 @@
     "        ind = None\n",
     "        \n",
     "    return ind\n",
-    "            \n",
+    "\n",
+    "def calculate_electric_field():\n",
+    "    global Ex, Ey, E\n",
+    "    \n",
+    "    Ex = np.zeros_like(X)\n",
+    "    Ey = np.zeros_like(X)\n",
+    "\n",
+    "    for charge in charges:\n",
+    "        x = charge['x']\n",
+    "        y = charge['y']\n",
+    "        q = charge['q']\n",
+    "\n",
+    "        dr_x = X - x\n",
+    "        dr_y = Y - y\n",
+    "\n",
+    "        dr = np.sqrt(dr_x**2 + dr_y**2)\n",
+    "\n",
+    "        Ex += q / dr**3 * dr_x\n",
+    "        Ey += q / dr**3 * dr_y\n",
+    "\n",
+    "\n",
+    "    E = np.sqrt(Ex**2 + Ey**2)\n",
+    "\n",
+    "calculate_electric_field()\n",
+    "\n",
+    "xs = [charge['x'] for charge in charges]\n",
+    "ys = [charge['y'] for charge in charges]\n",
+    "\n",
+    "line, = plt.plot(xs, ys, 'ro')\n",
+    "\n",
+    "#plt.pcolormesh(Xedges, Yedges, E)\n",
+    "contours = plt.contour(X, Y, E, [0.1 , 0.2, 0.3, 1, 2, 3])\n",
+    "#plt.plot(X, Y, 'k.')\n",
+    "i = (slice(None, None, 10), slice(None, None, 10))\n",
+    "#quiver = plt.quiver(X[i], Y[i], (Ex/E)[i], (Ey/E)[i])\n",
+    "fieldlines = plt.streamplot(X, Y, Ex, Ey, color='k', linewidth=1, density=0.7)\n",
+    "\n",
+    "plt.xlim(xmin, xmax)\n",
+    "plt.ylim(ymin, ymax)\n",
+    "\n",
+    "plt.axis('equal')\n",
+    "\n",
     "def onClick(e):\n",
-    "    global xs, ys\n",
+    "    global contours, quiver, fieldlines\n",
     "    \n",
     "    if e.inaxes is None:\n",
     "        return\n",
     "\n",
     "    if e.button == MouseButton.LEFT:\n",
     "        ind = get_ind(e)\n",
+    "       \n",
+    "        add_charge(1, e.xdata, e.ydata)\n",
     "        \n",
-    "        if ind is None:\n",
-    "            xs = np.append(xs, e.xdata)\n",
-    "            ys = np.append(ys, e.ydata)\n",
     "    elif e.button == MouseButton.RIGHT:\n",
-    "        \n",
     "        ind = get_ind(e)\n",
-    "        \n",
-    "        if ind is not None:\n",
-    "            xs = np.delete(xs, ind)\n",
-    "            ys = np.delete(ys, ind)\n",
+    "       \n",
+    "        add_charge(-1, e.xdata, e.ydata)\n",
     "            \n",
+    "    calculate_electric_field()\n",
+    "    \n",
+    "    xs = [charge['x'] for charge in charges]\n",
+    "    ys = [charge['y'] for charge in charges]\n",
+    "        \n",
     "    line.set_data(xs, ys)\n",
+    "    \n",
+    "    for c in contours.collections:\n",
+    "        c.remove()\n",
+    "    \n",
+    "    while len(ax.patches) > 0:\n",
+    "        ax.patches[0].remove()\n",
+    "    fieldlines.lines.remove()\n",
+    "    \n",
+    "    #quiver.remove()\n",
+    "    #quiver = plt.quiver(X[i], Y[i], (Ex/E)[i], (Ey/E)[i])\n",
+    "    \n",
+    "    fieldlines = plt.streamplot(X, Y, Ex, Ey, color='k', linewidth=1, density=0.7)\n",
+    "    contours = plt.contour(X, Y, E,  [0.1 , 0.2, 0.3, 1, 2, 3])\n",
     "\n",
     "fig.canvas.mpl_connect('button_press_event', onClick)\n",
-    "plt.xlim(0, 10)\n",
-    "plt.ylim(0, 10)\n",
     "\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.close(fig)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 295,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1f90679ef5954047b915894fa591f40c",
-       "version_major": 2,
-       "version_minor": 0
-      },
       "text/plain": [
-       "HBox(children=(FloatSlider(value=1.0, max=2.0, min=0.02, orientation='vertical'), Canvas(toolbar=Toolbar(tooli…"
+       "[1, 2, 3]"
       ]
      },
+     "execution_count": 295,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "# When using the `widget` backend from ipympl,\n",
-    "# fig.canvas is a proper Jupyter interactive widget, which can be embedded in\n",
-    "# Layout classes like HBox and Vbox.\n",
-    "\n",
-    "# One can bound figure attributes to other widget values.\n",
-    "\n",
-    "from ipywidgets import HBox, FloatSlider\n",
-    "\n",
-    "plt.ioff()\n",
-    "plt.clf()\n",
-    "\n",
-    "slider = FloatSlider(\n",
-    "    orientation='vertical',\n",
-    "    value=1.0,\n",
-    "    min=0.02,\n",
-    "    max=2.0\n",
-    ")\n",
-    "\n",
-    "fig = plt.figure(3)\n",
-    "\n",
-    "x = np.linspace(0, 20, 500)\n",
-    "\n",
-    "lines = plt.plot(x, np.sin(slider.value  * x))\n",
-    "\n",
-    "def update_lines(change):\n",
-    "    lines[0].set_data(x, np.sin(change.new * x))\n",
-    "    fig.canvas.draw()\n",
-    "    fig.canvas.flush_events()\n",
-    "\n",
-    "slider.observe(update_lines, names='value')\n",
-    "\n",
-    "HBox([slider, fig.canvas])"
+    "plt.get_fignums()"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "$${\\bf E}({\\bf r}) = K \\sum_i^N \\frac{q_i}{|{\\bf r} - {\\bf r}_i|^3} ({\\bf r} - {\\bf r}_i)$$"
+   ]
   }
  ],
  "metadata": {
