--- a/Ch10-Electrodynamics/10.1-Static-Charges.ipynb
+++ b/Ch10-Electrodynamics/10.1-Static-Charges.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -70,10 +70,10 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7f7e68d7f9a0>]"
+       "[<matplotlib.lines.Line2D at 0x12918b3d0>]"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
        "       [80, 82, 84, 86, 88]])"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,13 +125,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 79,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "",
+       "model_id": "8f85f32efda24bab8fbac0c11711f7ed",
        "version_major": 2,
        "version_minor": 0
       },
@@ -146,13 +146,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "<ipython-input-130-702dbd5b2ccf>:32: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "<ipython-input-79-702dbd5b2ccf>:32: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  Ex += q / (distance**3) * dr_x\n",
-      "<ipython-input-130-702dbd5b2ccf>:32: RuntimeWarning: invalid value encountered in multiply\n",
+      "<ipython-input-79-702dbd5b2ccf>:32: RuntimeWarning: invalid value encountered in multiply\n",
       "  Ex += q / (distance**3) * dr_x\n",
-      "<ipython-input-130-702dbd5b2ccf>:33: RuntimeWarning: divide by zero encountered in true_divide\n",
+      "<ipython-input-79-702dbd5b2ccf>:33: RuntimeWarning: divide by zero encountered in true_divide\n",
       "  Ey += q / (distance**3) * dr_y\n",
-      "<ipython-input-130-702dbd5b2ccf>:33: RuntimeWarning: invalid value encountered in multiply\n",
+      "<ipython-input-79-702dbd5b2ccf>:33: RuntimeWarning: invalid value encountered in multiply\n",
       "  Ey += q / (distance**3) * dr_y\n"
      ]
     }
@@ -254,19 +254,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 80,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'x': 7, 'y': 7, 'q': 1},\n",
-       " {'x': 3, 'y': 3, 'q': -1},\n",
-       " {'x': 7, 'y': 3, 'q': 1},\n",
-       " {'x': 4.100649350649349, 'y': 6.0974025478610745, 'q': 1}]"
+       "[{'x': 7, 'y': 7, 'q': 1}, {'x': 3, 'y': 3, 'q': -1}, {'x': 7, 'y': 3, 'q': 1}]"
       ]
      },
-     "execution_count": 117,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
